Fixed the misaligned nav
At least on my computer….

--- a/css/customize.css
+++ b/css/customize.css
@@ -13,18 +13,18 @@
     margin-right:50px;
     float:left;
 }
-h1 {
+#content h1 {
     text-align:center;
     font-size:1.2em;
     margin-bottom: 10px;
 }
-h3 {
+#content h3 {
     text-align:right;
     font-size:1.2em;
     margin-bottom:5px;
     margin-top: 15px;
 }
-h5{
+#content h5{
     text-align: right;
     margin-top: 5px;
     margin-bottom: 5px;
